k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grav-svc
  namespace: grav
spec:
  selector:
    app: grav
  ports:
    - port: 80
      targetPort: 80
      name: http
